--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body class="bg-gradient-to-br from-blue-400 to-purple-700 min-h-screen flex items-center justify-center p-4">
 
   <div class="bg-yellow-50 p-6 sm:p-10 rounded-2xl shadow-2xl w-70 max-w-md transition-all duration-300">
-    <h2 class="text-2xl sm:text-3xl font-bold text-center text-blue-700 mb-6">BMI Calculator</h2>
+    <h2 class="text-2xl sm:text-3xl font-bold text-center text-purple-700 mb-6">BMI Calculator</h2>
 
     <div class="space-y-4">
       <div>
-        <label for="height" class="block text-gray-700 font-medium mb-1">Enter Height (cm)</label>
-        <input id="height" type="number" placeholder="e.g. 170"
+        <label for="height" class="block text-gray-700 font-medium mb-1">Height</label>
+        <input id="height" type="number" placeholder="e.g. 1.90"
           class="w-full px-4 py-2 border border-purple-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
       </div>
 
       <div>
-        <label for="weight" class="block text-gray-700 font-medium mb-1">Enter Weight (kg)</label>
+        <label for="weight" class="block text-gray-700 font-medium mb-1">Weight </label>
         <input id="weight" type="
-        number" placeholder="e.g. 65"
+        number" placeholder="e.g. 85"
           class="w-full px-4 py-2 border border-purple-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
       </div>
 
