--- a/index.html
+++ b/index.html
@@ -5,18 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Unique BMI Calculator</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    /* Custom animation for result display */
-    @keyframes slideInFromTop {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    .animate-slideInFromTop {
-      animation: slideInFromTop 0.4s ease-out forwards;
-    }
-  </style>
+
 </head>
 <body class="bg-gradient-to-br from-gray-900 via-gray-800 to-black min-h-screen flex items-center justify-center p-4 font-sans">
   
@@ -65,100 +55,9 @@
       <div id="errorMessage" class="mt-4 p-3 bg-red-900 border border-red-700 text-red-300 rounded-lg hidden text-center text-sm animate-slideInFromTop">
         <i class="fas fa-exclamation-circle mr-2"></i>Please enter valid positive numbers for height and weight.
       </div>
-
-      <!-- BMI Reference Guide -->
-      <!-- <div class="mt-8 p-4 bg-gray-800 rounded-xl border border-gray-700">
-        <h3 class="text-gray-300 font-semibold mb-3 text-center text-lg">
-          <i class="fas fa-info-circle mr-2 text-blue-400"></i>BMI Categories
-        </h3>
-        <div class="grid grid-cols-2 gap-2 text-sm text-gray-400">
-          <div class="flex items-center"><div class="w-2 h-2 bg-blue-500 rounded-full mr-2"></div>Underweight: &lt; 18.5</div>
-          <div class="flex items-center"><div class="w-2 h-2 bg-green-500 rounded-full mr-2"></div>Normal: 18.5 - 24.9</div>
-          <div class="flex items-center"><div class="w-2 h-2 bg-yellow-500 rounded-full mr-2"></div>Overweight: 25.0 - 29.9</div>
-          <div class="flex items-center"><div class="w-2 h-2 bg-red-500 rounded-full mr-2"></div>Obese: &ge; 30.0</div> -->
-        </div>
-      </div> -->
-
-    </div>
+  </div>
   </div>
   
-  <script>
-    function calculateBMI() {
-      const heightInput = document.getElementById("height");
-      const weightInput = document.getElementById("weight");
-      const resultDiv = document.getElementById("result");
-      const bmiValueElement = document.getElementById("bmiValue");
-      const bmiCategoryElement = document.getElementById("bmiCategory");
-      const categoryTextElement = document.getElementById("categoryText");
-      const categoryIconElement = document.getElementById("categoryIcon");
-      const errorMessageElement = document.getElementById("errorMessage");
-
-      // Hide previous results and errors
-      resultDiv.classList.add("hidden");
-      errorMessageElement.classList.add("hidden");
-      resultDiv.classList.remove("animate-slideInFromTop"); // Reset animation
-
-      const height = parseFloat(heightInput.value);
-      const weight = parseFloat(weightInput.value);
-
-      if (!height || !weight || height <= 0 || weight <= 0) {
-        errorMessageElement.classList.remove("hidden");
-        return;
-      }
-
-      const heightInMeters = height / 100; // Convert cm to meters
-      const bmi = (weight / (heightInMeters * heightInMeters));
-      const bmiRounded = bmi.toFixed(1); // Keep as string for display
-
-      let categoryMessage = "";
-      let categoryClass = "";
-      let iconClass = "";
-
-      if (bmi < 18.5) {
-        categoryMessage = "Underweight";
-        categoryClass = "bg-blue-600 text-white";
-        iconClass = "fas fa-arrow-down";
-      } else if (bmi < 25) {
-        categoryMessage = "Normal Weight";
-        categoryClass = "bg-green-600 text-white";
-        iconClass = "fas fa-check-circle";
-      } else if (bmi < 30) {
-        categoryMessage = "Overweight";
-        categoryClass = "bg-yellow-600 text-white";
-        iconClass = "fas fa-exclamation-triangle";
-      } else {
-        categoryMessage = "Obese";
-        categoryClass = "bg-red-600 text-white";
-        iconClass = "fas fa-exclamation-circle";
-      }
-
-      // Update content
-      bmiValueElement.textContent = bmiRounded;
-      categoryTextElement.textContent = categoryMessage;
-      categoryIconElement.className = iconClass; // Set icon class
-
-      // Apply category styling, clearing previous classes
-      bmiCategoryElement.className = `inline-flex items-center px-5 py-2 rounded-full text-lg font-semibold shadow-md ${categoryClass}`;
-
-      // Show result with animation
-      resultDiv.classList.remove("hidden");
-      resultDiv.classList.add("animate-slideInFromTop");
-    }
-
-    // Optional: Clear error message when user starts typing
-    document.getElementById('height').addEventListener('input', function() {
-        document.getElementById('errorMessage').classList.add('hidden');
-    });
-    document.getElementById('weight').addEventListener('input', function() {
-        document.getElementById('errorMessage').classList.add('hidden');
-    });
-
-    // Optional: Allow Enter key to trigger calculation
-    document.addEventListener('keypress', function(event) {
-        if (event.key === 'Enter') {
-            calculateBMI();
-        }
-    });
-  </script>
+  <script src="in.js"></script>
 </body>
 </html>
